--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node app.js",
-    "test": "mocha --compilers js:babel-core/register 'test/**/*.js'"
+    "start": "nodemon --exec babel-node ./src",
+    "test": "cross-env NODE_ENV=test mocha $(find __tests__ -name '*.test.js') --colors --compilers js:babel-register",
+    "test:watch": "cross-env NODE_ENV=test mocha $(find __tests__ -name '*.test.js') --colors --compilers js:babel-register -w"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "homepage": "https://github.com/whynotcrybot/kimochi-server#readme",
   "dependencies": {
     "body-parser": "^1.17.1",
+    "cross-env": "^4.0.0",
     "express": "^4.15.2",
     "mongoose": "^4.9.3",
     "q": "^1.5.0"
@@ -26,6 +28,7 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1"
+    "babel-preset-es2015": "^6.24.1",
+    "supertest": "^3.0.0"
   }
 }
