--- a/package.json
+++ b/package.json
@@ -23,11 +23,17 @@
   "homepage": "https://github.com/whynotcrybot/kimochi-server#readme",
   "dependencies": {
     "body-parser": "^1.17.1",
+    "compression": "^1.6.2",
+    "cors": "^2.8.3",
     "cross-env": "^4.0.0",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
+    "express-winston": "^2.4.0",
+    "helmet": "^3.5.0",
+    "method-override": "^2.3.8",
     "mongoose": "^4.9.3",
-    "rimraf": "^2.6.1"
+    "rimraf": "^2.6.1",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -35,6 +41,8 @@
     "babel-preset-env": "^1.4.0",
     "babel-register": "^6.24.1",
     "chai": "^3.5.0",
+    "express-status-monitor": "^0.1.9",
+    "morgan": "^1.8.1",
     "supertest": "^3.0.0"
   }
 }
