--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "express-winston": "^2.4.0",
+    "faker": "^4.1.0",
     "helmet": "^3.5.0",
     "method-override": "^2.3.8",
     "mongoose": "^4.9.3",
