--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-winston": "^2.4.0",
     "faker": "^4.1.0",
     "helmet": "^3.5.0",
+    "http-status": "^1.0.1",
     "method-override": "^2.3.8",
     "mongoose": "^4.9.3",
     "rimraf": "^2.6.1",
