--- a/travis.yml
+++ b/travis.yml
@@ -1,6 +1,7 @@
 language: node_js
 node_js:
   - "7"
+script: cd server && npm install && npm test    
 before_script:
   - npm install -g mocha
 services:
