--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "yarn run clean && cross-env NODE_ENV=production babel --out-dir=dist ./src",
+    "build": "yarn run clean && cross-env NODE_ENV=production babel --out-dir=dist ./source",
     "clean": "rimraf dist",
     "start": "yarn build && cross-env NODE_ENV=production node dist",
     "dev": "cross-env NODE_ENV=development nodemon --exec babel-node ./source",
