--- a/server/Dockerfile.dev
+++ b/server/Dockerfile.dev
@@ -1,14 +1,21 @@
-FROM node:7.9.0-alpine
+FROM node:7.10.0-alpine
 
+MAINTAINER Alex Katsero <alexanderkatsero@gmail.com> <https://github.com/whynotcrybot>
+
+# create app directory in container and set to be default
 RUN mkdir -p /app
 WORKDIR /app
 
 ADD package.json yarn.lock /app/
+
 RUN yarn --pure-lockfile
-RUN yarn global add nodemon
+
+RUN yarn add nodemon
 
 COPY . /app
 
 EXPOSE 3000
 
-CMD yarn dev
+# cmd to start service
+CMD ["yarn", "dev"]
+
