--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "yarn run clean && cross-env NODE_ENV=production babel --out-dir=dist ./source",
-    "clean": "rimraf dist",
-    "start": "yarn build && cross-env NODE_ENV=production node dist",
-    "dev": "cross-env NODE_ENV=development nodemon --exec babel-node ./source",
-    "test": "cross-env NODE_ENV=test mocha $(find __tests__ -name '*.test.js') --colors --compilers js:babel-register",
-    "test:watch": "cross-env NODE_ENV=test mocha $(find __tests__ -name '*.test.js') --colors --compilers js:babel-register -w"
+    "build": "nps build",
+    "start": "nps",
+    "dev": "nps dev",
+    "test": "nps test",
+    "test:watch": "nps test.watch"
   },
   "repository": {
     "type": "git",
@@ -39,12 +38,16 @@
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-loader": "^7.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.4.0",
-    "babel-register": "^6.24.1",
     "chai": "^3.5.0",
     "express-status-monitor": "^0.1.9",
     "morgan": "^1.8.1",
-    "supertest": "^3.0.0"
+    "nps": "^5.3.2",
+    "nps-utils": "^1.2.0",
+    "supertest": "^3.0.0",
+    "webpack": "^2.6.1",
+    "webpack-node-externals": "^1.6.0"
   }
 }
