--- a/server/.babelrc
+++ b/server/.babelrc
@@ -4,7 +4,8 @@
       "env",
       {
         "targets": {
-          "node": "6.10"
+          "node": "6.10",
+          "uglify": true
         }
       }
     ]
