--- a/server/package.json
+++ b/server/package.json
@@ -47,6 +47,7 @@
     "nps": "^5.3.2",
     "nps-utils": "^1.2.0",
     "supertest": "^3.0.0",
+    "uglifyjs-webpack-plugin": "^0.4.6",
     "webpack": "^2.6.1",
     "webpack-node-externals": "^1.6.0"
   }
