--- a/server/package.json
+++ b/server/package.json
@@ -46,6 +46,7 @@
     "morgan": "^1.8.1",
     "nps": "^5.3.2",
     "nps-utils": "^1.2.0",
+    "stats-webpack-plugin": "^0.6.1",
     "supertest": "^3.0.0",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "webpack": "^2.6.1",
